# Tamagotchi-thing

./: .gitignore  .gitmodules  README.md
Hardware/Tamagotchi-thing/: Tamagotchi-thing.kicad_dru  Tamagotchi-thing.kicad_pcb  Tamagotchi-thing.kicad_pro  Tamagotchi-thing.kicad_sch  fp-lib-table  sym-lib-table  ~Tamagotchi-thing.kicad_pcb.lck
Hardware/Tamagotchi-thing/libs/: TamagotchiThing.kicad_sym
Hardware/Tamagotchi-thing/libs/3d/: FFC-SMD_12P-P0.50_FH34SRJ-12S-0.5SH.step  SW-SMD_SIQ-02FVS3.step  USB-C-SMD_HC-TYPE-C-16P-01A.step
Hardware/Tamagotchi-thing/libs/TamagotchiThing.pretty/: Battery_Pads_4x4.kicad_mod  FFC-SMD_12P-P0.50_FH34SRJ-12S-0.5SH.kicad_mod  Hirose_FH34SRJ-14S-0.5SH_1x14-1MP_P0.50mm_Horizontal.kicad_mod  Kailh_mouse_button.kicad_mod  LCD_14p_0.6mm.kicad_mod  LED-SMD_4P-L1.6-W1.5-TL-1.kicad_mod  SW-SMD_SIQ-02FVS3.kicad_mod  SW_SKRPACE010.kicad_mod  VREG_TPS63802DLAR.kicad_mod  sh1106-1.3inch-oled.kicad_mod  sh1106-1.3inch-oled_1.kicad_mod
Hardware/Tamagotchi-thing/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
Hardware/Tamagotchi-thing/sch/: OLED.kicad_sch  mcu.kicad_sch  power.kicad_sch
Software/: TamagotchiThing.ioc
Software/Tamagotchi-thing/: .gitignore  .mxproject  CMakeLists.txt  STM32L073XX_FLASH.ld  TamagotchiThing.ioc  flash.sh
Software/Tamagotchi-thing/Core/Inc/: lptim.h  main.h  rtc.h  ssd1306_conf.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h  tim.h  u8x8_stm32_HAL.h  ui.h  usart.h  userio.h
Software/Tamagotchi-thing/Core/Src/: adc.c  dma.c  gpio.c  hal_types.h  i2c.c  lptim.c  main.c  rtc.c  spi.c  stm32l0xx_it.c  tim.c  u8g2_stm32L0.c  ui.c  usart.c  userio.c
Software/Tamagotchi-thing/Core/Src/flash/: flash.c  flash.h  flash_glue.c  flash_glue.h
Software/Tamagotchi-thing/Core/Src/log/: log.c  log.h
Software/Tamagotchi-thing/Core/Src/tama_user/: tama_icons.h  tama_storage.c  tama_storage.h  tama_user.c  tama_user.h
Software/Tamagotchi-thing/Core/Src/ui/: forms.c  forms.h  ui.c  ui.h
Software/Tamagotchi-thing/Core/Src/usb/: tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_user.c  usb_user.h  usb_user_cdc.c  usb_user_cdc.h
Software/Tamagotchi-thing/Core/Src/userio/: userio.c  userio.h
Software/Tamagotchi-thing/cmake/stm32cubemx/: CMakeLists.txt
Software/TamagotchiThing/: .cproject  .mxproject  .project  STM32L073RBTX_FLASH.ld  TamagotchiThing.ioc
Software/TamagotchiThing/Core/Inc/: main.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
Software/TamagotchiThing/Core/Src/: main.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c
Software/TamagotchiThing/USB_DEVICE/App/: usb_device.h
